--- a/public/index.html
+++ b/public/index.html
@@ -12,5 +12,6 @@
   <h1>Welcome</h1>
   <h2>Please log in here:</h2>
   <div id="qrcode"></div>
+  <a href="https://accounts.spotify.com/authorize?client_id=d831b0f307a1448b8ba4aa26c71f1496&response_type=code&redirect_uri=https://spotify-player-esp32.onrender.com/callback&scope=user-read-playback-state%20user-read-currently-playing%20user-modify-playback-state&show_dialog=true">or here</a>
 </body>
 </html>
