--- a/public/form.html
+++ b/public/form.html
@@ -12,7 +12,7 @@
   <h1>Welcome</h1>
   <h2>Please fill in the code here:</h2>
 
-  <form id="mac-form" action="/register" method="POST">
+  <form id="mac-form" action="/data/register" method="POST">
     <label for="mac">Device Code:</label><br />
     <input type="text" id="mac" name="mac" placeholder="e.g. B8:F0:BA:FF:FF:E0" required />
     <br /><br />
