--- a/public/form.html
+++ b/public/form.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Homepage</title>
-  <link rel="stylesheet" href="./index.css" />
+  <link rel="stylesheet" href="../public/index.css" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
-  <script src="./index.js" defer></script>
+  <script src="../public/index.js" defer></script>
 </head>
 <body>
   <h1>Welcome</h1>
