--- a/public/success.html
+++ b/public/success.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Homepage</title>
-  <link rel="stylesheet" href="./index.css" />
+  <link rel="stylesheet" href="../public/index.css" />
 </head>
 <body>
   <h1>Login Successful!</h1>
   <h2>You can now access your currently played songs!</h2>
-  <a href="./index.html">return to login page</a>
+  <a href="../public/index.html">return to login page</a>
 </body>
 </html>
